2007-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/log.c: Add preliminary version of SPLIT_SNPRINTF to
	  work-around bug m68k/coldfire -fomit-frame-pointer bug
	  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=32307.

2007-07-27	Chris Johns <chrisj@rtems.org>

	* wrapup/Makefile.am: Create archive from a file for hosts
	with a limited command line size.

2007-07-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/rtems/bspIo.h, include/rtems/pci.h:
	Add extern "C" guards. Reported by
	Robert S. Grimes <rsg@alum.mit.edu>.

2007-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/cpuuse/cpuusagereport.c, libmisc/cpuuse/cpuusagereset.c,
	score/src/timespecdivide.c: Fix various math and reporting bugs. Now
	the time appears to be reported correctly and add up to what is
	expected.

2007-07-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/Makefile.am: Prefix all non-public symbols with _shttp_.
	* shttpd/compat_rtems.c: Don't build my_stat for rtems.
	* shttpd/defs.h: Don't build most of my_* wrappers for rtems.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/Makefile.am, libmisc/cpuuse/cpuusagereport.c,
	libmisc/cpuuse/cpuusagereset.c: Fix bug where cpu usage calculation
	was always using uptime not time since last cpu usage reset when
	using nanoseconds granularity.
	* libmisc/cpuuse/cpuusagedata.c: New file.

2007-07-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/mount.c: Allow null for output parameter.

2007-07-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shttpd/compat_rtems.c, shttpd/compat_rtems.h: Add port to listen on
	to shttpd initialization.

2007-07-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/malloc.c: Clean up Malloc debug code.
	* score/include/rtems/score/heap.h: Spacing.
	* score/inline/rtems/score/thread.inl:
	* score/src/heapfree.c. Clean up and add explicit check of the address
	being freed actually being in the heap.