@@ -61,19 +61,17 @@ elog(int flags, struct conn *c, const char *fmt, ...)
 		exit(EXIT_FAILURE);
 }
 
-/* HACK: m68k-gcc <= 4.2.1 ICEs on the snprintf below for some 
+/*
+ * HACK: m68k-gcc <= 4.2.1 ICEs on the snprintf below for some 
  * coldfire variants for yet unknown reasons.
+ * C.f.: http://gcc.gnu.org/bugzilla/show_bug.cgi?id=32307
  */
 #if defined(__GNUC__) && \
    ( (__GNUC__ < 4 ) || \
      ( (__GNUC__ == 4 ) && (__GNUC_MINOR__ < 2 ) ) || \
        ( (__GNUC__ == 4 ) && (__GNUC_MINOR__ == 2 ) && (__GNUC_PATCHLEVEL__ <= 1 ) ) )
-#if defined(__mcf528x__) 
-//# define SPLIT_SNPRINTF 1
-#endif /* __mcf528x__ */
-#if defined(__mcf5200__) 
-#endif /* __mcf5200__ */
 #if defined(__mcoldfire__) 
+#define SPLIT_SNPRINTF 1
 #endif /* __mcoldfire__ */
 #endif /* __GNUC__ */
 
