@@ -1,5 +1,10 @@
 2007-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* shttpd/log.c: Activate SPLIT_SNPRINTF for gcc <= 4.2.1 and
+	  coldfire.
+
+2007-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* shttpd/log.c: Add preliminary version of SPLIT_SNPRINTF to
 	  work-around bug m68k/coldfire -fomit-frame-pointer bug
 	  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=32307.
